--- a/css/styles.css
+++ b/css/styles.css
@@ -657,6 +657,9 @@ a {
 
 
 
+/* index-page */
+
+
 .index-main {
     padding: 80px 0;
 	color: rgb(255, 255, 255);
@@ -837,6 +840,9 @@ a {
 
 
 
+/* login-page */
+
+
 .login-content {
     width: 300px;
     margin: 0 auto;
@@ -847,6 +853,9 @@ a {
 }
 
 
+
+
+/* contacts-page */
 
 
 .contacts-content-wrapper {
@@ -884,6 +893,8 @@ a {
 
 
 
+
+/* shop-pages */
 
 .shop-content-wrapper {
     display: flex;
@@ -1028,6 +1039,9 @@ a {
 
 
 
+/* price-page */
+
+
 .big-slogan {
     display: flex;
     align-items: center;
@@ -1082,6 +1096,9 @@ a {
 }
 
 
+
+
+/* news-page */
 
 
 .news-item {
