Реализация увеличения фото на главной

--- a/css/styles.css
+++ b/css/styles.css
@@ -768,13 +768,13 @@ a {
     overflow-x: hidden;
 }
 
-.gallery-content a {
+.gallery-photo {
     padding: 0;
     margin: 0;
     display: block;
 }
 
-.gallery-content img {
+.gallery-photo img {
     padding: 0;
     margin: 0;
     border: 7px solid rgb(255, 255, 255);
@@ -793,13 +793,26 @@ a {
     margin-bottom: 50px;
 }
 
-.index-gallery-js .gallery-content a {
+.index-gallery-js .gallery-photo {
     position: absolute;
 	top: 0;  left: 0;
 }
 
 .index-gallery-js .current-photo {
+	position: relative;
     z-index: 10;
+}
+.index-gallery-js .current-photo:hover::after {
+	content: "";
+	position: absolute;
+	top: 39px;  left: 100px;
+	width: 100px;
+	height: 100px;
+	background: url("../img/zoom-loupe.png") 50% 50% / 100% no-repeat;
+	opacity: 0.8;
+}
+.index-gallery-js .current-photo:active::after {
+	opacity: 0.6;
 }
 
 .index-gallery-js .gallery-nav {
@@ -807,6 +820,81 @@ a {
 	display: flex;
 	justify-content: space-between;
 	margin-top: auto;
+}
+
+
+.modal-content-photo {
+	display: none;
+    z-index: 200;
+    position: fixed;
+	top: 50%;  left: 50%;
+}
+
+.modal-content-photo-show {
+	display: block;
+}
+
+.zoomed-photo {
+	padding: 0;
+	margin: 0;
+	width: 1200px;
+	height: auto;
+	border: 7px solid rgb(255, 255, 255);
+}
+
+.gallery-slider-btn {
+	position: absolute;
+	top: 7px;  bottom: 14px;
+	width: 100px;
+	background: transparent;
+	border: none;
+	outline: none;
+	cursor: pointer;
+}
+.gallery-slider-btn:hover {
+	background: rgba(0, 0, 0, 0.3);
+}
+
+.gallery-slider-prev {
+	left: 7px;
+}
+.gallery-slider-prev::after {
+	content: "";
+	position: absolute;
+	top: 50%;  left: 15px;
+	width: 64px;
+	height: 64px;
+	margin-top: -32px;
+	background: url(../img/arrow-back.png) 50% 50% / 100% no-repeat;
+	opacity: 0.5;
+}
+.gallery-slider-prev:hover::after {
+	opacity: 1;
+	left: 10px;
+}
+.gallery-slider-prev:active::after {
+	transform: scale(0.9);
+}
+
+.gallery-slider-next {
+	right: 7px;
+}
+.gallery-slider-next::after {
+	content: "";
+	position: absolute;
+	top: 50%;  right: 15px;
+	width: 64px;
+	height: 64px;
+	margin-top: -32px;
+	background: url(../img/arrow-next.png) 50% 50% / 100% no-repeat;
+	opacity: 0.5;
+}
+.gallery-slider-next:hover::after {
+	opacity: 1;
+	right: 10px;
+}
+.gallery-slider-next:active::after {
+	transform: scale(0.9);
 }
 
 
